--- a/views/admin/good/new.ejs
+++ b/views/admin/good/new.ejs
@@ -15,6 +15,25 @@
         <input type="number" class="form-control" id="price" placeholder="售价" name="price">
       </div>
       <div class="form-group">
+        <label for="specify">规格</label>
+        <input type="text" class="form-control" id="specify" placeholder="如：500g/袋" name="specify">
+      </div>
+      <div class="form-group">
+        <label for="cat">分类</label>
+        <select class="form-control" id="cat" name="cat">
+          <option>进口水果</option>
+          <option>国产水果</option>
+          <option>精选肉类</option>
+          <option>禽类蛋品</option>
+          <option>海鲜水产</option>
+          <option>即烹美食</option>
+          <option>乳品糕点</option>
+          <option>新鲜蔬菜</option>
+          <option>方便素食</option>
+          <option>粮油杂货</option>
+        </select>
+      </div>
+      <div class="form-group">
         <label for="desc">简介</label>
         <textarea class="form-control" id="desc" placeholder="简介" name="desc"></textarea>
       </div>
