--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -127,16 +127,10 @@
           </a>
         </li>
         <li>
-          <a href="/admin/food">
-            <i class="fa fa-th"></i> <span>菜谱管理</span>
+          <a href="/admin/article">
+            <i class="fa fa-th"></i> <span>文章管理</span>
             <span class="pull-right-container">
             </span>
-          </a>
-        </li>
-        <li>
-          <a href="/admin/menu">
-            <i class="fa fa-laptop"></i>
-            <span>菜单管理</span>
           </a>
         </li>
         </ul>
