--- a/views/admin/good/new.ejs
+++ b/views/admin/good/new.ejs
@@ -8,38 +8,41 @@
     <div class="box-body">
       <div class="form-group">
         <label for="goodname">商品名</label>
-        <input type="text" class="form-control" id="goodname" placeholder="商品名" name="goodname">
+        <input type="text" class="form-control" id="goodname" value="<%- item && item.goodname %>"  placeholder="商品名" name="goodname">
       </div>
       <div class="form-group">
         <label for="price">售价</label>
-        <input type="number" class="form-control" id="price" placeholder="售价" name="price">
+        <input type="number" class="form-control" id="price" value="<%- item && item.price %>"  placeholder="售价" name="price">
       </div>
       <div class="form-group">
         <label for="specify">规格</label>
-        <input type="text" class="form-control" id="specify" placeholder="如：500g/袋" name="specify">
+        <input type="text" class="form-control" id="specify" placeholder="如：500g/袋" value="<%- item && item.specify %>" name="specify">
       </div>
       <div class="form-group">
         <label for="cat">分类</label>
-        <select class="form-control" id="cat" name="cat">
-          <option>进口水果</option>
-          <option>国产水果</option>
-          <option>精选肉类</option>
-          <option>禽类蛋品</option>
-          <option>海鲜水产</option>
-          <option>即烹美食</option>
-          <option>乳品糕点</option>
-          <option>新鲜蔬菜</option>
-          <option>方便素食</option>
-          <option>粮油杂货</option>
+        <select class="form-control" id="cat" name="cat" value="">
+          <option <%- item && item.cat == '进口水果' ? 'selected' :'' %>>进口水果</option>
+          <option <%- item && item.cat == '国产水果' ? 'selected' :'' %>>国产水果</option>
+          <option <%- item && item.cat == '精选肉类' ? 'selected' :'' %>>精选肉类</option>
+          <option <%- item && item.cat == '禽类蛋品' ? 'selected' :'' %>>禽类蛋品</option>
+          <option <%- item && item.cat == '海鲜水产' ? 'selected' :'' %>>海鲜水产</option>
+          <option <%- item && item.cat == '即烹美食' ? 'selected' :'' %>>即烹美食</option>
+          <option <%- item && item.cat == '乳品糕点' ? 'selected' :'' %>>乳品糕点</option>
+          <option <%- item && item.cat == '新鲜蔬菜' ? 'selected' :'' %>>新鲜蔬菜</option>
+          <option <%- item && item.cat == '方便素食' ? 'selected' :'' %>>方便素食</option>
+          <option <%- item && item.cat == '粮油杂货' ? 'selected' :'' %>>粮油杂货</option>
         </select>
       </div>
       <div class="form-group">
         <label for="desc">简介</label>
-        <textarea class="form-control" id="desc" placeholder="简介" name="desc"></textarea>
+        <textarea class="form-control" id="desc" placeholder="简介" name="desc"><%- item && item.desc %></textarea>
       </div>
       <div class="form-group">
-        <label for="goodpost">上传图片</label>
-        <input type="file" id="goodpost" name="file">
+        <% if(item && item._id) { %>
+            <img class="snap-shot" src="<%- item && item.picUrl%>" alt="">
+        <% } else { %>
+            <input type="file" name="file" id="id-input-file-2" required/>
+        <% } %>
         <p class="help-block"></p>
       </div>
     </div>
@@ -50,15 +53,23 @@
     </div>
   </form>
 </div>
-
+<style>
+    .snap-shot {
+        width: 100px;
+    }
+</style>
 <script>
   var submitData = function () {
     var data = new FormData($('#goodForm')[0]);
+    var url = "<%- item && item._id ? '/admin/good/edit': '/admin/good/upload' %>";
+    <% if(item && item._id) {%>
+        data.append('id', '<%- item._id %>')
+    <% }%>
     $.ajax(
       {
         type: "POST",
         dataType: "json",
-        url: "/admin/good/upload",
+        url,
         contentType: false,
         processData: false,
         data,
@@ -67,6 +78,8 @@
             setTimeout(()=>{
               window.location.href = "/admin/good/"
             }, 1000)
+          }else{
+            alert(result.msg)
           }
         },
         error: function () {
