--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -128,7 +128,7 @@
         </li>
         <li>
           <a href="/admin/article">
-            <i class="fa fa-th"></i> <span>文章管理</span>
+            <i class="fa fa-th"></i> <span>评论管理</span>
             <span class="pull-right-container">
             </span>
           </a>
