--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -128,6 +128,13 @@
         </li>
         <li>
           <a href="/admin/article">
+            <i class="fa fa-th"></i> <span>商品品类管理</span>
+            <span class="pull-right-container">
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="/admin/review">
             <i class="fa fa-th"></i> <span>评论管理</span>
             <span class="pull-right-container">
             </span>
