--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -28,7 +28,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a><b>生鲜超市</b>管理后台</a>
+    <a><b>商城</b>管理后台</a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
