--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -34,6 +34,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <link href="/css/jquery.tagit.css" rel="stylesheet" type="text/css">
   <%- style %>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -126,16 +127,23 @@
             </span>
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="/admin/article">
             <i class="fa fa-th"></i> <span>商品品类管理</span>
             <span class="pull-right-container">
             </span>
           </a>
-        </li>
+        </li> -->
         <li>
           <a href="/admin/review">
             <i class="fa fa-th"></i> <span>评论管理</span>
+            <span class="pull-right-container">
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="/admin/dashboard">
+            <i class="fa fa-th"></i> <span>订单统计</span>
             <span class="pull-right-container">
             </span>
           </a>
@@ -212,6 +220,7 @@
 <script src="/bower_components/fastclick/lib/fastclick.js"></script>
 <!-- AdminLTE App -->
 <script src="/admin_js/adminlte.min.js"></script>
+<script src="/js/tag-it.js" type="text/javascript" charset="utf-8"></script>
 <%- script %>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <!-- <script src="/js/pages/dashboard.js"></script> -->
