--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -127,13 +127,13 @@
             </span>
           </a>
         </li>
-        <!-- <li>
-          <a href="/admin/article">
+        <li>
+          <a href="/admin/good/configtype">
             <i class="fa fa-th"></i> <span>商品品类管理</span>
             <span class="pull-right-container">
             </span>
           </a>
-        </li> -->
+        </li>
         <li>
           <a href="/admin/review">
             <i class="fa fa-th"></i> <span>评论管理</span>
